--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="#developer">Developer</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://justadudewhohacks.github.io/face-api.js/docs/index.html">Docs</a></li>
                     <li class="nav-item"><a class="nav-link" href="#price">Prices</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#working">Working</a></li>
+                    <li class="nav-item"><a class="nav-link" href="face-recong.html">Working</a></li>
                     <li class="nav-item"><a class="nav-link" href="#user">Testimonials</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
                 </ul><button class="btn btn-primary" type="button">Register Now</button>
